# demo-ats

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.local  Dockerfile  entrypoint.sh  pyproject.toml
backend/api/: settings.py  urls.py
backend/professionals/: models.py  serializers.py  tests.py  urls.py  views.py
backend/professionals/migrations/: 0001_professional.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx  types.ts
frontend/src/api/: professionals.ts
frontend/src/components/: Layout.tsx  ProfessionalForm.tsx  ProfessionalsTable.tsx  StyledCard.tsx  index.ts
frontend/src/components/__tests__/: ProfessionalForm.test.tsx  ProfessionalsTable.test.tsx
frontend/src/pages/: AddProfessionalPage.tsx  ProfessionalsListPage.tsx
frontend/src/styles/: globalStyles.ts  theme.ts
frontend/src/test/: setup.ts
frontend/src/test/mocks/: handlers.ts
